--- a/static/games/snake/index.html
+++ b/static/games/snake/index.html
@@ -1,85 +1,35 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Snake Game 🐍 - Mobile Edition</title>
+    <title>Snake Mobile</title>
     <style>
-        * { margin: 0; padding: 0; touch-action: none; } /* Impede zoom/scroll */
-        body { 
-            background: linear-gradient(135deg, #11998e 0%, #38ef7d 100%);
-            display: flex; flex-direction: column; align-items: center; justify-content: center; 
-            min-height: 100vh; font-family: 'Arial', sans-serif; overflow: hidden;
+        body { margin:0; background:#000; display:flex; flex-direction:column; height:100vh; }
+        #scoreBoard { color:white; text-align:center; padding:15px; font-size:1.5rem; background:#111; }
+        canvas { flex:1; display:block; margin:0 auto; }
+        #gameOver { 
+            position:absolute; top:50%; left:50%; transform:translate(-50%,-50%);
+            background:rgba(0,0,0,0.9); color:white; padding:30px; border-radius:20px;
+            text-align:center; display:none; width:90%; max-width:400px;
         }
-        canvas { 
-            border: 4px solid rgba(255,255,255,0.8); border-radius: 20px; 
-            box-shadow: 0 20px 50px rgba(0,0,0,0.4); background: #000; 
-            max-width: 95vw; max-height: 70vh; touch-action: none;
-        }
-        .score { 
-            font-size: clamp(1.5rem, 5vw, 2.5rem); color: white; margin: 15px 0; 
-            font-weight: bold; text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
-            text-align: center;
-        }
-        .game-over { 
-            position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); 
-            background: rgba(0,0,0,0.95); color: white; padding: 40px; border-radius: 25px; 
-            text-align: center; display: none; box-shadow: 0 0 60px rgba(255,107,107,0.9);
-            z-index: 1000; max-width: 90vw;
-        }
-        .restart-btn { 
-            background: linear-gradient(45deg, #ff6b6b, #ff5252); color: white; border: none; 
-            padding: 18px 36px; border-radius: 15px; font-size: clamp(1.1rem, 4vw, 1.4rem); 
-            cursor: pointer; margin-top: 20px; transition: all 0.3s;
-        }
-        .restart-btn:hover, .restart-btn:active { 
-            transform: scale(1.05); box-shadow: 0 10px 30px rgba(255,107,107,0.6);
-        }
-        .joystick-zone {
-            position: fixed; bottom: 20px; left: 20px; width: 120px; height: 120px;
-            border-radius: 50%; background: rgba(255,255,255,0.1); display: none;
-            z-index: 999; pointer-events: none;
-        }
-        .joystick-knob {
-            position: absolute; width: 60px; height: 60px; border-radius: 50%;
-            background: rgba(255,255,255,0.6); top: 50%; left: 50%; transform: translate(-50%, -50%);
-            transition: all 0.1s;
-        }
-        /* Tutorial rápido pro mobile */
-        .tutorial {
-            position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
-            text-align: center; color: white; font-size: 1.3rem; z-index: 1001;
-            animation: fadeInOut 3s forwards;
-        }
-        @keyframes fadeInOut {
-            0% { opacity: 1; }
-            80% { opacity: 1; }
-            100% { opacity: 0; }
-        }
+        button { background:#e74c3c; color:white; border:none; padding:15px 30px; 
+                 font-size:1.2rem; border-radius:12px; margin-top:15px; }
     </style>
 </head>
 <body>
-    <div class="score">Pontos: <span id="score">0</span> | Melhor: <span id="highScore">0</span></div>
-    <canvas id="gameCanvas" tabindex="1"></canvas>
-    
-    <div id="gameOver" class="game-over">
-        <h2>GAME OVER! 🐍</h2>
-        <p style="font-size: clamp(1.2rem, 5vw, 1.6rem);">Pontos Finais: <span id="finalScore">0</span></p>
-        <button class="restart-btn" onclick="restartGame()">Jogar Novamente</button>
+    <div id="scoreBoard">
+        Pontos: <span id="score">0</span> | 
+        Melhor: <span id="highScore">0</span>
     </div>
+    <canvas id="gameCanvas"></canvas>
 
-    <!-- Joystick virtual (aparece só no mobile ao tocar) -->
-    <div class="joystick-zone" id="joystickZone">
-        <div class="joystick-knob" id="joystickKnob"></div>
-    </div>
-
-    <!-- Tutorial rápido -->
-    <div class="tutorial">
-        <div style="font-size: 2rem; margin-bottom: 10px;">👆 Toque para jogar!</div>
-        <div>Deslize ou use o joystick</div>
+    <div id="gameOver">
+        <h2>Game Over!</h2>
+        <p>Pontuação: <span id="finalScore">0</span></p>
+        <button onclick="restartGame()">Jogar Novamente</button>
     </div>
 
     <script src="/static/games/snake/snake.js"></script>
-    <script>initGame();</script>
 </body>
 </html>
